fixed spacing between boxes

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -819,7 +819,7 @@
   height: 337px;
   display: block;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 22.5px;
 }
 
 #uxDesign {
@@ -832,7 +832,7 @@
   width: 325px;
   height: 337px;
   display: block;
-  margin-left: auto;
+  margin-left: 22.5px;
   margin-right: auto;
   text-align: left;
 }
@@ -848,7 +848,7 @@
   height: 337px;
   display: block;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 22.5px;
   text-align: left;
 }
 
@@ -863,7 +863,7 @@
   width: 325px;
   height: 337px;
   display: block;
-  margin-left: auto;
+  margin-left: 22.5px;
   margin-right: auto;
   text-align: left;
   /* width: 50%; */
